# claude-code-telegram

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
config/: mcp.example.json
data/: mrt_exits.geojson
docs/superpowers/specs/: 2026-04-26-compact-command-design.md
scripts/: download_mrt_exits.py
src/bot/: orchestrator.py
src/mcp/: mrt_exits_server.py
src/storage/: database.py  facade.py  models.py  repositories.py
tests/unit/: test_orchestrator.py
tests/unit/mcp/: test_mrt_exits_server.py
tests/unit/test_mcp/: test_mrt_exits_server.py
